<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    tools:context=".SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/login_image"
            android:contentDescription="@string/companyLogoText"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employeeLoginText"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            style="@style/textViewMaterial"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employeeCodeText"
            style="@style/textViewMaterial"
            />
        <EditText
            android:id="@+id/userID_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employeeCodeHint"
            android:inputType="textCapCharacters|textNoSuggestions"
            style="@style/editViewMaterial"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employeePassText"
            style="@style/textViewMaterial"
            />
        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employeePassHint"
            style="@style/editViewMaterial"
            android:inputType="textWebPassword"/>
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/buttonText"
            />
    </LinearLayout>
</ScrollView>
